# guido

./: .gitignore  .gitmodules  README.md  START.md  TODO.md  fake_odom.py  ros-humble-twist-mux_4.3.0-1jammy.20260310.175521_arm64.deb
agents/guido_mission_agent/: __init__.py  agent.py  backend.py
docs/: autonomous_navigation.md  jetson_nav_runbook.md
firmware/: wheelchair_arduino.ino
frontend/guido-live-view/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/guido-live-view/src/: App.jsx  index.css  main.jsx
scripts/: adk_transcript_bridge.py  guido_git_steward.sh  install_ros2_humble.sh  install_ros2_jazzy.sh  requirements-adk.txt  requirements-voice.txt  setup_lidar.sh  start_frontier_mapping.py  validate_system.py  voice_stream.py
scripts/automation/: guido_git_steward_prompt.md
src/auto_nav/: ._tests  package.xml  setup.py
src/auto_nav/config/: exploration.rviz  fastrtps_profile.xml  frontier_mapping.rviz  nav2.yaml  slam_localization.yaml  slam_mapping.yaml  slam_nav.rviz  slam_toolbox.yaml
src/auto_nav/launch/: exploration.launch.py  frontier_mapping.launch.py  guido_navigation.launch.py  mapping.launch.py  navigation.launch.py  slam_nav.launch.py  slam_teleop.launch.py
src/auto_nav/navigation/: __init__.py  adapters.py  cmd_vel_bridge.py  command_node.py  commands.py  frontier_explorer.py  frontiers.py  health.py  messages.py  navigation_node.py  supervisor.py  types.py  waypoints.py
src/auto_nav/test/: test_adk_waypoint_backend.py  test_commands.py  test_frontier_launcher.py  test_frontiers.py  test_health_and_supervisor.py  test_waypoints.py
src/auto_nav/tests/: test_adapters.py  test_commands.py  test_frontiers.py  test_health_and_supervisor.py  test_packaging.py  test_waypoints.py
src/guido_base/: package.xml  setup.cfg  setup.py
src/guido_base/config/: serial_bridge.yaml
src/guido_base/guido_base/: keyboard_teleop.py  serial_bridge.py
src/guido_bringup/: CMakeLists.txt  package.xml
src/guido_bringup/config/: amcl.yaml  ekf.yaml  ldlidar.yaml  lifecycle_mgr.yaml  nav_lifecycle_mgr.yaml  slam_toolbox.yaml  twist_mux.yaml
src/guido_bringup/launch/: ._guido_lidar.launch.py  guido_autonomy.launch.py  guido_base.launch.py  guido_frontend_bridge.launch.py  guido_lidar.launch.py  guido_mapping.launch.py
src/guido_bringup/rviz/: guido_navigation.rviz
src/guido_bringup/urdf/: guido.urdf.xml
src/guido_navigation/: package.xml  setup.cfg  setup.py
src/guido_navigation/config/: command_mux.yaml  controller.yaml  lidar_perception.yaml  localization_bridge.yaml  mission_manager.yaml  planner.yaml  safety.yaml  waypoints.yaml
src/guido_navigation/guido_navigation/: __init__.py  command_mux.py  common.py  global_planner.py  lidar_perception.py  localization_bridge.py  mission_manager.py  safety_monitor.py  scan_filter.py  telemetry_bridge.py  trajectory_controller.py
src/guido_navigation/resource/: guido_navigation
src/guido_navigation/test/: test_scan_filter.py
