<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_nav</name>
  <version>0.1.0</version>
  <description>Autonomous navigation orchestration for the Guido smart wheelchair.</description>

  <maintainer email="todo@guido.dev">Guido Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>guido_bringup</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  <depend>nav_msgs</depend>
  <depend>python3-yaml</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
