<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_nav</name>
  <version>0.1.0</version>
  <description>Autonomous navigation stack for Guido waypointing and Nav2 path following.</description>

  <maintainer email="todo@guido.dev">Guido Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
