<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guido_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for Guido — an autonomous wheelchair with LiDAR navigation on Jetson</description>

  <maintainer email="todo@guido.dev">Guido Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ldlidar_node</exec_depend>
  <exec_depend>ldlidar_component</exec_depend>
  <exec_depend>guido_base</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
